Altered the text color do 0 do visor maior.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:padding="10dp"
         android:text="0"
         android:textAlignment="textEnd"
+        android:textColor="#8A8A8A"
         android:textSize="60sp" />
 
     <include
